Lab3: added admins functions
