# Lab2/pzpi-22-3-shut-oleksandr-lab2/src/modules/rooms/rooms.schema.ts
@@ -9,6 +9,9 @@ export class Room {
   user: Types.ObjectId
 
   @Prop({ required: true })
+  roomName: string
+
+  @Prop({ required: true })
   temperature: number
 
   @Prop({ required: true })
